Occlusion query feature is already in GL ES3.0 spec, not an extension.

BUG=623871
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel;tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2103773002
Cr-Commit-Position: refs/heads/master@{#404357}

Former-commit-id: 2794a38ac40872a43fba5590297ef85ced1297b4